// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/bazel/package getPackageUpdates returns http archive result 1`] = `
Array [
  Object {
    "newVersion": "0.8.1",
    "newVersionMajor": 0,
    "type": "minor",
  },
]
`;

exports[`lib/manager/bazel/package getPackageUpdates returns major result 1`] = `
Array [
  Object {
    "newVersion": "2.0.0",
    "newVersionMajor": 2,
    "type": "major",
  },
]
`;

exports[`lib/manager/bazel/package getPackageUpdates returns result if newer version 1`] = `
Array [
  Object {
    "newVersion": "1.1.1",
    "newVersionMajor": 1,
    "type": "minor",
  },
]
`;
